add terrain data to backup